--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: go
-
 matrix:
   include:
     - go: 1.10.x
     - go: 1.11.x
     - go: 1.12.x
-
 before_install:
   - mkdir -p bin
   - curl -Lso bin/shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.3/shellcheck
@@ -13,3 +11,6 @@ before_install:
 script:
   - PATH=$PATH:$PWD/bin go test -v ./...
   - go build
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
